--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,67 +1,60 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+<html xmlns:th="http://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body},'index')}">
 
-
-    <link rel="stylesheet" type="text/css" href="CSS/semantic.min.css">
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-    <script src="CSS/semantic.min.js"></script>
-    <script src="CSS/components/visibility.js"></script>
-    <script src="CSS/components/sidebar.js"></script>
-    <script src="CSS/components/transition.js"></script>
-
-    <style>
-        .headerslot{
-            margin-top: 100px;
-        }
-        .wrapper {
-            width: 700px;
-            margin: 0 auto;
-        }
-    </style>
-
-</head>
 <body>
-<div id="myheader">
-    <script>$('#myheader').load('header.html');</script>
+
+<div class="jumbotron text-center">
+    <div class="container">
+        <a href="/" class="lang-logo">
+            <img src="/lang-logo.png">
+        </a>
+        <h1>Getting Started with Java on Heroku</h1>
+        <p>This is a sample Java application deployed to Heroku. It's a reasonably simple app - but a good foundation for understanding how to get the most out of the Heroku platform.</p>
+        <a type="button" class="btn btn-lg btn-default" href="https://devcenter.heroku.com/articles/getting-started-with-java"><span class="glyphicon glyphicon-flash"></span> Getting Started with Java</a>
+        <a type="button" class="btn btn-lg btn-primary" href="https://github.com/heroku/java-getting-started"><span class="glyphicon glyphicon-download"></span> Source on GitHub</a>
+    </div>
 </div>
+<div class="container">
+    <div class="alert alert-info text-center" role="alert">
+        To deploy your own copy, and learn the fundamentals of the Heroku platform, head over to the <a href="https://devcenter.heroku.com/articles/getting-started-with-java" class="alert-link">Getting Started with Java on Heroku</a> tutorial.
+    </div>
+    <hr>
+    <div class="row">
+        <div class="col-md-6">
+            <h3><span class="glyphicon glyphicon-info-sign"></span> How this sample app works</h3>
+            <ul>
+                <li>This app was deployed to Heroku, either using Git or by using <a href="https://github.com/heroku/java-getting-started">Heroku Button</a> on the repository.</li>
 
-
-<div class="wrapper">
-    <form class="ui form headerslot field">
-
-
-        <div class="column">
-            <h2 class="ui blue image header">
-                <div class="content">
-                    Log-in to your account.
-                </div>
-            </h2>
-            <div class="four column row">
-                <div class="ten wide column" style="width: 500px;">
-                    <div class="field input">
-                        <div class="field">
-                            <label>Email Address</label>
-                            <label>
-                                <input type="email" name="regEmail">
-                            </label>
-                        </div>
-                        <div class="field">
-                            <label>Password</label>
-                            <label>
-                                <input type="password" name="regPassword">
-                            </label>
-                        </div>
-
-                        <button class="ui inverted green button" type="submit">Login</button>
-                    </div>
-                </div>
-            </div>
+                <li>When Heroku received the source code, it fetched all the dependencies in the <a href="https://github.com/heroku/java-getting-started/blob/master/pom.xml">pom.xml</a>, creating a slug.</li>
+                <li>The platform then spins up a dyno, a lightweight container that provides an isolated environment in which the slug can be mounted and executed.</li>
+                <li>You can scale your app, manage it, and deploy over <a href="https://addons.heroku.com/">150 add-on services</a>, from the Dashboard or CLI.</li>
+            </ul>
         </div>
-    </form>
+        <div class="col-md-6">
+            <h3><span class="glyphicon glyphicon-link"></span> Next Steps</h3>
+            <ul>
+                <li>If you are following the <a href="https://devcenter.heroku.com/articles/getting-started-with-java">Getting Started</a> guide, then please head back to the tutorial and follow the next steps!</li>
+                <li>If you deployed this app by deploying the Heroku Button, then in a command line shell, run:</li>
+                <ul>
+                    <li><code>git clone https://github.com/heroku/java-getting-started.git</code> - this will create a local copy of the source code for the app</li>
+                    <li><code>cd java-getting-started</code> - change directory into the local source code repository</li>
+                    <li><code>heroku git:remote -a &lt;your-app-name></code> - associate the Heroku app with the repository</li>
+                    <li>You'll now be set up to run the app locally, or <a href="https://devcenter.heroku.com/articles/getting-started-with-java#push-local-changes">deploy changes</a> to Heroku</li>
+                </ul>
+            </ul>
+            <h3><span class="glyphicon glyphicon-link"></span> Helpful Links</h3>
+            <ul>
+                <li><a href="https://www.heroku.com/home">Heroku</a></li>
+                <li><a href="https://devcenter.heroku.com/">Heroku Dev Center</a></li>
+                <li><a href="https://devcenter.heroku.com/articles/getting-started-with-java">Getting Started with Java on Heroku</a></li>
+                <li><a href="https://devcenter.heroku.com/articles/deploying-java">Deploying Java Apps on Heroku</a></li>
+            </ul>
+        </div>
+    </div> <!-- row -->
+    <div class="alert alert-info text-center" role="alert">
+        Please do work through the Getting Started guide, even if you do know how to build such an application.  The guide covers the basics of working with Heroku, and will familiarize you with all the concepts you need in order to build and deploy your own apps.
+    </div>
 </div>
+
 </body>
 </html>
