some magic going on

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,10 +8,10 @@
 
     <link rel="stylesheet" type="text/css" th:href="@{/css/semantic.min.css}">
     <script th:src="@{webjars.jquery.3.1.1/jquery.min.js}"></script>
-    <script src="/css/semantic.min.js"></script>
-    <script src="/css/components/visibility.js"></script>
-    <script src="/css/components/sidebar.js"></script>
-    <script src="/css/components/transition.js"></script>
+    <script th:src="@{/css/semantic.min.js}"></script>
+    <script th:src="@{/css/components/visibility.js}"></script>
+    <script th:src="@{/css/components/sidebar.js}"></script>
+    <script th:src="@{/css/components/transition.js}"></script>
 
     <style>
         .headerslot{
