--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -26,6 +26,10 @@
 </head>
 <body>
 
+<div id="myheader">
+    <script>$('#myheader').load('header.html');</script>
+</div>
+
 
 <div class="wrapper">
     <form class="ui form headerslot field">
