some magic going on

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,7 +7,7 @@
 
 
     <link rel="stylesheet" type="text/css" th:href="@{/css/semantic.min.css}">
-    <script th:src="@{webjars.jquery.3.1.1/jquery.min.js}"></script>
+    <script th:src="@{webjars/jquery.3.1.1/jquery.min.js}"></script>
     <script th:src="@{/css/semantic.min.js}"></script>
     <script th:src="@{/css/components/visibility.js}"></script>
     <script th:src="@{/css/components/sidebar.js}"></script>
@@ -22,8 +22,8 @@
             margin: 0 auto;
         }
     </style>
-
 </head>
+
 <body>
 <div id="myheader">
     <script>$('#myheader').load('header.html');</script>
