some magic going on

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,12 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
 
-    <link rel="stylesheet" type="text/css" th:href="@{/css/semantic.min.css}">
-    <script th:src="@{webjars/jquery.3.1.1/jquery.min.js}"></script>
-    <script th:src="@{/css/semantic.min.js}"></script>
-    <script th:src="@{/css/components/visibility.js}"></script>
-    <script th:src="@{/css/components/sidebar.js}"></script>
-    <script th:src="@{/css/components/transition.js}"></script>
+    <script src="/css/semantic.min.js"></script>
+    <script src="/css/components/visibility.js"></script>
+    <script src="/css/components/sidebar.js"></script>
+    <script src="/css/components/transition.js"></script>
 
     <style>
         .headerslot{
