--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,19 +1,9 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" th:charset="utf-8">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
 
 
-
-    <style>
-        .headerslot{
-            margin-top: 100px;
-        }
-        .wrapper {
-            width: 700px;
-            margin: 0 auto;
-        }
-    </style>
 </head>
 
 <body>
