--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,14 +5,20 @@
 <head>
     <title>Demo</title>
 
-    <link rel="stylesheet" type="text/css" href="../static/semantic/dist/semantic.min.css" th:href="@{/semantic/dist/semantic.min.css}" />
+    <link rel="stylesheet" type="text/css" href="/static/semantic/dist/semantic.min.css" th:href="@{/static/semantic/dist/semantic.min.css}">
+    <script
+            src="https://code.jquery.com/jquery-3.1.1.min.js"
+            integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+            crossorigin="anonymous"></script>
+    <script src="/static/semantic/dist/semantic.min.js" th:src="@{/static/semantic/dist/semantic.min.js}"></script>
 
-    <script src="http://cdn.jsdelivr.net/webjars/jquery/3.1.1/jquery.min.js"
-            th:src="@{/webjars/jquery/3.1.1/jquery.min.js}"></script>
-    <script src="../static/semantic/dist/semantic.min.js" th:href="@{/semantic/dist/semantic.min.js}"></script>
 </head>
 
 <body>
+
+<div id="myheader">
+    <script>$('#myheader').load('header.html');</script>
+</div>
 <div class="wrapper">
     <form class="ui form headerslot field">
 
