--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -8,12 +8,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
-    <link rel="stylesheet" type="text/css" href="/static/semantic/dist/semantic.min.css" th:href="@{/static/semantic/dist/semantic.min.css}">
+    <link rel="stylesheet" type="text/css" href="../static/semantic/dist/semantic.min.css" th:href="@{semantic/dist/semantic.min.css}">
     <script
             src="https://code.jquery.com/jquery-3.1.1.min.js"
             integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
             crossorigin="anonymous"></script>
-    <script src="/static/semantic/dist/semantic.min.js" th:src="@{/static/semantic/dist/semantic.min.js}"></script>
+    <script src="../static/semantic/dist/semantic.min.js" th:src="@{semantic/dist/semantic.min.js}"></script>
 
 </head>
 
