--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,12 +5,13 @@
 <head>
     <title>Demo</title>
 
-    <link rel="stylesheet" type="text/css" href="/static/semantic/dist/semantic.min.css" th:href="@{/semantic/dist/semantic.min.css}">
+    <link rel="stylesheet" type="text/css" href="../static/semantic/dist/semantic.min.css" th:href="@{semantic/dist/semantic.min.css}">
     <script
             src="https://code.jquery.com/jquery-3.1.1.min.js"
             integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
             crossorigin="anonymous"></script>
-    <script src="/static/semantic/dist/semantic.min.js" th:src="@{/semantic/dist/semantic.min.js}"></script>
+    <script src="../static/semantic/dist/semantic.min.js" th:src="@{semantic/dist/semantic.min.js}"></script>
+
 
 </head>
 
