--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -8,9 +8,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.10/semantic.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
+    <link rel="stylesheet" type="text/css" href="../static/semantic/dist/semantic.min.css" th:href="@{/semantic/dist/semantic.min.css}" />
+    <script src="../static/semantic/dist/visibility.js" th:href="@{/semantic/dist/visibility.js}"></script>
+    <script src="../static/semantic/dist/sidebar.js" th:href="@{/semantic/dist/sidebar.js}"></script>
+    <script src="../static/semantic/dist/transition.js" th:href="@{/semantic/dist/transition.js}"></script>
+    <script src="../static/semantic/dist/semantic.min.js" th:href="@{/semantic/dist/semantic.min.js}"></script>
 </head>
 
 
