--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,10 +8,11 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link rel="stylesheet" type="text/css" href="../static/semantic/dist/semantic.min.css" th:href="@{/semantic/dist/semantic.min.css}" />
-    <script src="../static/semantic/dist/visibility.js" th:href="@{/semantic/dist/visibility.js}"></script>
-    <script src="../static/semantic/dist/sidebar.js" th:href="@{/semantic/dist/sidebar.js}"></script>
-    <script src="../static/semantic/dist/transition.js" th:href="@{/semantic/dist/transition.js}"></script>
+    <script src="/static/semantic/dist/components/visibility.js" th:href="@{/semantic/dist/visibility.js}"></script>
+    <script src="/static/semantic/dist/components/sidebar.js" th:href="@{/semantic/dist/sidebar.js}"></script>
+    <script src="/static/semantic/dist/components/transition.js" th:href="@{/semantic/dist/transition.js}"></script>
     <script src="../static/semantic/dist/semantic.min.js" th:href="@{/semantic/dist/semantic.min.js}"></script>
+
 
 
 
