all front pages fix

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -28,7 +28,7 @@
 <body>
 
 <div id="myheader">
-    <script>$('#myheader').load('header.html');</script>
+    <script>$('#myheader').load('../static/header.html');</script>
 </div>
 
 
