--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,14 +20,14 @@
 <body>
 
 <div id="myheader">
-    <script>$('#myheader').load('header.html');</script>
+    <script>$('#myheader').load('../static/header.html');</script>
 </div>
 <div class="wrapper">
     <form class="ui form headerslot field">
 
 
 
-
+bhbuhb
             </form>
         </div>
 
