--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -27,7 +27,7 @@
 </head>
 <body>
 <div id="myheader">
-    <script>$('#myheader').load('header.html');</script>
+    <script>$('#myheader').load('../static/header.html');</script>
 </div>
 
 
