--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,12 +14,10 @@
     <script src="../static/semantic/dist/semantic.min.js" th:href="@{/semantic/dist/semantic.min.js}"></script>
 
 
-
-
 <body>
 
 <div id="myheader">
-    <script>$('#myheader').load('header');</script>
+    <script>$('#myheader').load('header.html');</script>
 </div>
 <div class="wrapper">
     <form class="ui form headerslot field">
