--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,12 +6,14 @@
     <title>Demo</title>
 
 
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link rel="stylesheet" type="text/css" href="../static/semantic/dist/semantic.min.css" th:href="@{/semantic/dist/semantic.min.css}" />
     <script src="../static/semantic/dist/components/visibility.js" th:href="@{/semantic/dist/components/visibility.js}"></script>
     <script src="../static/semantic/dist/components/sidebar.js" th:href="@{/semantic/dist/components/sidebar.js}"></script>
     <script src="../static/semantic/dist/components/transition.js" th:href="@{/semantic/dist/components/transition.js}"></script>
     <script src="../static/semantic/dist/semantic.min.js" th:href="@{/semantic/dist/semantic.min.js}"></script>
+
 
     <style>
         .headerslot{
@@ -26,7 +28,7 @@
 </head>
 <body>
 <div id="myheader">
-    <script>$('#myheader').load('../static/header.html');</script>
+    <script>$('#myheader').load('header.html');</script>
 </div>
 
 
