work on register controller

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -53,7 +53,7 @@
                     <div class="field input">
                         <label>Surname</label>
                         <label>
-                            <input type="text" th:field="*{surname}">
+                            <input type="text" th:field="*{lastName}">
                         </label>
                     </div>
                     <div class="field">
