work on register controller

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -38,31 +38,31 @@
                     <div class="field input">
                         <label>Name</label>
                         <label>
-                            <input type="text" name="regName" th:field="*{name}">
+                            <input type="text" name="regName">
                         </label>
                     </div>
                     <div class="field input">
                         <label>Surname</label>
                         <label>
-                            <input type="text" th:field="*{lastName}">
+                            <input type="text" >
                         </label>
                     </div>
                     <div class="field">
                         <label>Email Address</label>
                         <label>
-                            <input type="email" th:field="*{email}">
+                            <input type="email" >
                         </label>
                     </div>
                     <div class="field">
                         <label>Pesel</label>
                         <label>
-                            <input type="number" name="pesel" th:field="*{pesel}">
+                            <input type="number" name="pesel" >
                         </label>
                     </div>
                     <div class="field">
                         <label>Password</label>
                         <label>
-                            <input type="password" name="regPassword" th:field="*{password}">
+                            <input type="password" name="regPassword" >
                         </label>
                     </div>
 
