--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -38,13 +38,13 @@
                         <div class="field">
                             <label>Email Address</label>
                             <label>
-                                <input type="email" name="regEmail">
+                                <input type="email" name="regEmail"/>
                             </label>
                         </div>
                         <div class="field">
                             <label>Password</label>
                             <label>
-                                <input type="password" name="regPassword">
+                                <input type="password" name="regPassword"/>
                             </label>
                         </div>
 
