work on register controller

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -34,7 +34,7 @@
             </h2>
             <div class="four column row">
                 <div class="ten wide column" style="width: 500px;">
-                    <form action="/register" th:action="@{/register}" method="post" th:object="${clientForm}" >
+                    <form action="#" th:action="@{/register}"  th:object="${clientForm}" method="post">
                     <div class="field input">
                         <label>Name</label>
                         <label>
