--- a/src/main/resources/templates/Flights.html
+++ b/src/main/resources/templates/Flights.html
@@ -35,33 +35,21 @@
         <div class="ui divided items">
             <div class="item">
                 <div class="image">
-                    <img src="/images/wireframe/image.png">
+                    <img src="flightimg.jpg">
                 </div>
                 <div class="content">
-                    <a class="header">TODO title</a>
+                    <a class="header">ToSydney</a>
                     <div class="meta">
-                        <span class="cinema">TODO OPIS</span>
-                    </div>
-                    <div class="description">
-                        <p></p>
-                    </div>
-                    <div class="extra">
-                        <div class="ui label">GOWNO</div>
-                        <div class="ui label">GOWNO</div>
-                        <div class="ui label">GOWNO</div>
-                    </div>
-                </div>
-            </div>
-
-
-            <div class="item">
-                <div class="image">
-                    <img src="/images/wireframe/image.png">
-                </div>
-                <div class="content">
-                    <a class="header">TODO TITLE</a>
-                    <div class="meta">
-                        <span class="cinema">TODO OPIS</span>
+                        <span class="cinema">
+                            <h5>
+                                <div><label>Flight number: GS3211</label></div>
+                                <div><label>From: Moscow</label></div>
+                                <div><label>Depature: 14/02/2017 11:00</label></div>
+                                <div><label>To: Sydney</label></div>
+                                <div><label>Arrival: 14/02/2017 17:30</label></div>
+                                <div><label>Selected info: ToSydney</label></div>
+                            </h5>
+                        </span>
                     </div>
                     <div class="description">
                         <p></p>
@@ -71,7 +59,6 @@
                             Buy tickets
                             <i class="right chevron icon"></i>
                         </div>
-                        <div class="ui label">JAKIES GOWNO</div>
                     </div>
                 </div>
             </div>
@@ -79,12 +66,52 @@
 
             <div class="item">
                 <div class="image">
-                    <img src="/images/wireframe/image.png">
+                    <img src="flightimg.jpg">
                 </div>
                 <div class="content">
-                    <a class="header">TODO TITLE</a>
+                    <a class="header">ToNewYork</a>
                     <div class="meta">
-                        <span class="cinema">TODO OPIS</span>
+                        <span class="cinema">
+                            <h5>
+                                <div><label>Flight number: FR4734</label></div>
+                                <div><label>From: Krakow</label></div>
+                                <div><label>Depature: 04/02/2017 22:20</label></div>
+                                <div><label>To: New York</label></div>
+                                <div><label>Arrival: 05/02/2017 12:00</label></div>
+                                <div><label>Selected info: ToNewYork</label></div>
+                            </h5>
+                        </span>
+                    </div>
+                    <div class="description">
+                        <p></p>
+                    </div>
+                    <div class="extra">
+                        <div class="ui right floated primary button">
+                            Buy tickets
+                            <i class="right chevron icon"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="item">
+                <div class="image">
+                    <img src="flightimg.jpg">
+                </div>
+                <div class="content">
+                    <a class="header">ToWarsaw</a>
+                    <div class="meta">
+                        <span class="cinema">
+                            <h5>
+                                <div><label>Flight number: FE3243</label></div>
+                                <div><label>From: London</label></div>
+                                <div><label>Depature: 14/02/2017 16:00</label></div>
+                                <div><label>To: Warsaw</label></div>
+                                <div><label>Arrival: 14/02/2017 21:05</label></div>
+                                <div><label>Selected info: ToWarsaw</label></div>
+                            </h5>
+                        </span>
                     </div>
                     <div class="description">
                         <p></p>
