--- a/src/main/resources/templates/adminflights.html
+++ b/src/main/resources/templates/adminflights.html
@@ -94,16 +94,16 @@
     <table class="ui striped selectable celled table" style="margin-top: 30px;">
         <thead>
         <tr>
-            <th>todo</th>
-            <th>todo</th>
-            <th>todo</th>
-            <th>todo</th>
+            <th>Name</th>
+            <th>Birthday</th>
+            <th>Email</th>
+            <th>Status</th>
         </tr>
         </thead>
         <tbody>
         <tr>
-            <td>John Lilki</td>
-            <td>September 14, 2013</td>
+            <td>Jeremiah Pearson</td>
+            <td>September 14, 1984</td>
             <td>jhlilk22@yahoo.com</td>
             <td>
                 <button class="mini ui green button">
@@ -115,20 +115,86 @@
             <td>Jamie Harington</td>
             <td>January 11, 2014</td>
             <td>jamieharingonton@yahoo.com</td>
-            <td>Yes</td>
+            <td>
+                <button class="mini ui green button">
+                    Accept
+                </button>
+            </td>
         </tr>
         <tr>
             <td>Jill Lewis</td>
             <td>May 11, 2014</td>
             <td>jilsewris22@yahoo.com</td>
-            <td>Yes</td>
+            <td>
+                <button class="mini ui green button">
+                    Accept
+                </button>
+            </td>
         </tr>
         <tr>
             <td>John Lilki</td>
             <td>September 14, 2013</td>
             <td>jhlilk22@yahoo.com</td>
-            <td>No</td>
+            <td>
+                <button class="mini ui green button">
+                    Accept
+                </button>
+            </td>
         </tr>
+        </tbody>
+    </table>
+
+
+
+</div>
+
+<div id="Accepted" class="tabcontent">
+
+        <table class="ui striped selectable celled table" style="margin-top: 30px;">
+            <thead>
+            <tr>
+                <th>Name</th>
+                <th>Birthday</th>
+                <th>Email</th>
+                <th>Status</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <td>John Lilki</td>
+                <td>September 14, 2013</td>
+                <td>jhlilk22@yahoo.com</td>
+                <td>No</td>
+            </tr>
+            <tr>
+                <td>Jamie Harington</td>
+                <td>January 11, 2014</td>
+                <td>jamieharingonton@yahoo.com</td>
+                <td>Yes</td>
+            </tr>
+            <tr>
+                <td>Jill Lewis</td>
+                <td>May 11, 2014</td>
+                <td>jilsewris22@yahoo.com</td>
+                <td>Yes</td>
+            </tr>
+            </tbody>
+        </table>
+
+</div>
+
+<div id="History" class="tabcontent">
+
+    <table class="ui striped selectable celled table" style="margin-top: 30px;">
+        <thead>
+        <tr>
+            <th>Name</th>
+            <th>Birthday</th>
+            <th>Email</th>
+            <th>Status</th>
+        </tr>
+        </thead>
+        <tbody>
         <tr>
             <td>John Lilki</td>
             <td>September 14, 2013</td>
@@ -153,24 +219,20 @@
             <td>jhlilk22@yahoo.com</td>
             <td>No</td>
         </tr>
+        <tr>
+            <td>Jamie Harington</td>
+            <td>January 11, 2014</td>
+            <td>jamieharingonton@yahoo.com</td>
+            <td>Yes</td>
+        </tr>
+        <tr>
+            <td>Jill Lewis</td>
+            <td>May 11, 2014</td>
+            <td>jilsewris22@yahoo.com</td>
+            <td>Yes</td>
+        </tr>
         </tbody>
     </table>
-
-
-
-</div>
-
-<div id="Accepted" class="tabcontent">
-
-
-
-
-
-</div>
-
-<div id="History" class="tabcontent">
-
-
 
 
 
