--- a/src/main/resources/templates/personal_data.html
+++ b/src/main/resources/templates/personal_data.html
@@ -55,7 +55,7 @@
 
                 <div class="ui two column grid">
                     <div class="sixteen wide column">
-                        <h1>TODO imie nazwisko</h1>
+                        <h1>John Reichenbach</h1>
                         <h3>Your profile.</h3>
                     </div>
 
@@ -64,7 +64,7 @@
                         <div class="imageplaceholder five wide column left floated">
                             <div class="image">
                             <div class="ui medium bordered fluid image">
-                                <img src="../static/testimage.jpg">
+                                <img src="userimage.jpg">
                             </div>
                             </div>
                         </div>
@@ -95,39 +95,43 @@
 
                                 <tr>
                                     <th style="padding-left: 20px">Name</th>
-                                    <td>TODO NAME</td>
+                                    <td>John</td>
                                 </tr>
                                 <tr>
                                     <th style="padding-left: 20px">Surname</th>
-                                    <td>TODO SURNAME</td>
+                                    <td>Reichenbach</td>
                                 </tr>
                                 <tr>
                                     <th style="padding-left: 20px">Email Address</th>
-                                    <td>TODO ADDRESS</td>
+                                    <td>john.reichenbach@gmail.com</td>
                                 </tr>
                                 <tr>
                                     <th style="padding-left: 20px">Birthday</th>
-                                    <td>TODO BIRTHDAY</td>
+                                    <td>15-03-1954</td>
                                 </tr>
                                 <tr>
                                     <th style="padding-left: 20px">Pesel</th>
-                                    <td>TODO PESEL</td>
+                                    <td>1954031533423</td>
                                 </tr>
                                 <tr>
-                                    <th style="padding-left: 20px">BLANK</th>
-                                    <td>Blank</td>
+                                    <th style="padding-left: 20px">Medicine</th>
+                                    <td>paracetamol 12:00,16:00</td>
                                 </tr>
                                 <tr>
-                                    <th style="padding-left: 20px">BLANK</th>
-                                    <td>Blank</td>
+                                    <th style="padding-left: 20px">Ticket name</th>
+                                    <td>ToLondon</td>
                                 </tr>
                                 <tr>
-                                    <th style="padding-left: 20px">BLANK</th>
-                                    <td>Blank</td>
+                                    <th style="padding-left: 20px">Guide dog</th>
+                                    <td>
+                                        <input type="checkbox" name="example">
+                                    </td>
                                 </tr>
                                 <tr>
-                                    <th style="padding-left: 20px">BLANK</th>
-                                    <td>Blank</td>
+                                    <th style="padding-left: 20px">Wheel chair</th>
+                                    <td>
+                                        <input type="checkbox" name="example">
+                                    </td>
                                 </tr>
 
                             </table>
