--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,22 +14,169 @@
     <script src="../static/semantic/dist/semantic.min.js" th:href="@{/semantic/dist/semantic.min.js}"></script>
 
 
+<style type="text/css">
+
+    .masthead.segment {
+        min-height: 700px;
+        padding: 1em 0em;
+    }
+    .masthead .logo.item img {
+        margin-right: 1em;
+    }
+    .masthead .ui.menu .ui.button {
+        margin-left: 0.5em;
+    }
+    .masthead h1.ui.header {
+        margin-top: 3em;
+        margin-bottom: 0em;
+        font-size: 4em;
+        font-weight: normal;
+    }
+    .masthead h2 {
+        font-size: 1.7em;
+        font-weight: normal;
+    }
+
+    .ui.vertical.stripe {
+        padding: 8em 0em;
+    }
+    .ui.vertical.stripe h3 {
+        font-size: 2em;
+    }
+    .ui.vertical.stripe .button + h3,
+    .ui.vertical.stripe p + h3 {
+        margin-top: 3em;
+    }
+    .ui.vertical.stripe .floated.image {
+        clear: both;
+    }
+    .ui.vertical.stripe p {
+        font-size: 1.33em;
+    }
+    .ui.vertical.stripe .horizontal.divider {
+        margin: 3em 0em;
+    }
+
+    .quote.stripe.segment {
+        padding: 0em;
+    }
+    .quote.stripe.segment .grid .column {
+        padding-top: 5em;
+        padding-bottom: 5em;
+    }
+
+    .footer.segment {
+        padding: 5em 0em;
+    }
+
+    .secondary.pointing.menu .toc.item {
+        display: none;
+    }
+
+    @media only screen and (max-width: 700px) {
+        .ui.fixed.menu {
+            display: none !important;
+        }
+        .secondary.pointing.menu .item,
+        .secondary.pointing.menu .menu {
+            display: none;
+        }
+        .secondary.pointing.menu .toc.item {
+            display: block;
+        }
+        .masthead.segment {
+            min-height: 350px;
+        }
+        .masthead h1.ui.header {
+            font-size: 2em;
+            margin-top: 1.5em;
+        }
+        .masthead h2 {
+            margin-top: 0.5em;
+            font-size: 1.5em;
+        }
+    }
+
+    .parallax1 {
+        min-height: 300px;
+        max-height: 550px;
+        background: url("header1.jpg") no-repeat fixed center;
+        background-size: cover;
+    }
+
+    .parallax2 {
+        min-height: 150px;
+        background: url("header2.jpg") no-repeat fixed center;
+        background-size: cover;
+    }
+
+    .parallax3 {
+        min-height: 300px;
+        background: url("header3.jpg") no-repeat fixed center;
+        background-size: cover;
+    }
+
+
+</style>
 
 </head>
-
 <body>
 
 <div id="myheader">
     <script>$('#myheader').load('../static/header.html');</script>
 </div>
-<div class="wrapper">
-    <form class="ui form headerslot field">
 
 
+<!-- Page Contents -->
+<div class="pusher">
 
-bhbuhb
-            </form>
+    <div class="parallax1">
+    <div class="ui vertical masthead center aligned segment">
+
+
+        <div class="ui text container">
+            <h1 class="ui inverted header">
+                Limitless
+            </h1>
+            <h2>Front-end is the limit</h2>
         </div>
+
+    </div>
+        </div>
+
+    <div class="ui vertical stripe segment">
+        <div class="ui middle aligned stackable grid container">
+            <div class="row">
+                <div class="eight wide column">
+                    <h3 class="ui header">todo todo todo todo todo todo </h3>
+                    <p>todo todo todo todo todo todo  todo todo todo todo todo todo  todo todo todo todo todo todo  todo todo todo todo todo todo </p>
+                    <h3 class="ui header">todo todo todo todo todo todo </h3>
+                    <p>Ytodo todo todo todo todo todo  todo todo todo todo todo todo </p>
+                </div>
+                <div class="six wide right floated column">
+                    <img src="headerticket.jpg" class="ui large bordered rounded image">
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="parallax3">
+        </div>
+
+
+    <div class="ui vertical stripe segment">
+        <div class="ui text container">
+            <h3 class="ui header">odo todo todo todo todo todo n</h3>
+            <p>Iodo todo todo todo todo todo odo todo todo todo todo todo odo todo todo todo todo todo odo todo todo todo todo todo odo todo todo todo todo todo </p>
+        </div>
+    </div>
+
+    <div class="parallax2">
+    </div>
+
+    </div>
+    </div>
 
 </body>
 </html>
