work on register controller

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -34,7 +34,7 @@
             </h2>
             <div class="four column row">
                 <div class="ten wide column" style="width: 500px;">
-                    <form action="#" th:action="@{/register}"  th:object="${clientForm}" th:method="post">
+                    <form action="#" th:action="@{/register}"  th:object="${clientForm}" method="POST" th:method="post">
                     <div class="field input">
                         <label>Name</label>
                         <label>
