--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -66,7 +66,7 @@
                         </label>
                     </div>
 
-                    <button class="ui inverted green button" type="submit">Create an account</button>
+                    <button class="ui inverted green button" type="submit" formmethod="post">Create an account</button>
                     </form>
                 </div>
             </div>
