--- a/src/main/resources/templates/flights.html
+++ b/src/main/resources/templates/flights.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 <div id="myheader">
-    <script>$('#myheader').load('../static/header.html');</script>
+    <script>$('#myheader').load('header.html');</script>
 </div>
 <div class="wrapper">
     <form class="ui form headerslot field">
