--- a/src/main/resources/templates/userflights.html
+++ b/src/main/resources/templates/userflights.html
@@ -14,20 +14,12 @@
     <script src="../static/semantic/dist/semantic.min.js" th:src="@{/semantic/dist/semantic.min.js}"></script>
 
 
-    <style>
-        .headerslot{
-            margin-top: 100px;
-        }
-        .wrapper {
-            width: 700px;
-            margin: 0 auto;
-        }
-    </style>
+
 
 </head>
 <body>
 <div id="myheader">
-    <script>$('#myheader').load('../static/header.html');</script>
+    <script>$('#myheader').load('header.html');</script>
 </div>
 <div class="wrapper">
     <form class="ui form headerslot field">
