work on register controller

--- a/src/main/resources/templates/flights.html
+++ b/src/main/resources/templates/flights.html
@@ -24,7 +24,7 @@
         <div class="ui divided items">
             <div class="item">
                 <div class="image">
-                    <img src="/images/wireframe/image.png">
+                    <img src="/images/wireframe/image.png"/>
                 </div>
                 <div class="content">
                     <a class="header">TODO title</a>
@@ -45,7 +45,7 @@
 
             <div class="item">
                 <div class="image">
-                    <img src="/images/wireframe/image.png">
+                    <img src="/images/wireframe/image.png"/>
                 </div>
                 <div class="content">
                     <a class="header">TODO TITLE</a>
