--- a/src/main/resources/templates/personal_data.html
+++ b/src/main/resources/templates/personal_data.html
@@ -63,7 +63,7 @@
                         <div class="imageplaceholder five wide column left floated">
                             <div class="image">
                             <div class="ui medium bordered fluid image">
-                                <img src="../static/testimage.jpg">
+                                <img src="../static/testimage.jpg"/>
                             </div>
                             </div>
                         </div>
