work on register controller

--- a/src/main/resources/templates/flights.html
+++ b/src/main/resources/templates/flights.html
@@ -68,7 +68,7 @@
 
             <div class="item">
                 <div class="image">
-                    <img src="/images/wireframe/image.png">
+                    <img src="/images/wireframe/image.png"/>
                 </div>
                 <div class="content">
                     <a class="header">TODO TITLE</a>
