--- a/src/main/resources/templates/personal_data.html
+++ b/src/main/resources/templates/personal_data.html
@@ -78,7 +78,7 @@
 
                                         if (o.tagName === 'TD') {
                                             o.setAttribute('value', o.innerHTML);
-                                            o.innerHTML = '<input type="text" value="' + o.innerHTML + '">' +
+                                            o.innerHTML = '<input type="text" value="' + o.innerHTML + '"/>' +
                                                     '<button class="cancel ui inverted red button right floated">Cancel</button>' +
                                                     '<button class="save ui inverted green button right floated">Save</button>';
 
