work on register controller

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -100,19 +100,19 @@
     .parallax1 {
         min-height: 300px;
         max-height: 550px;
-        background: url("header1.jpg") no-repeat fixed center;
+        background: url("static/header1.jpg") no-repeat fixed center;
         background-size: cover;
     }
 
     .parallax2 {
         min-height: 150px;
-        background: url("header2.jpg") no-repeat fixed center;
+        background: url("static/header2.jpg") no-repeat fixed center;
         background-size: cover;
     }
 
     .parallax3 {
         min-height: 300px;
-        background: url("header3.jpg") no-repeat fixed center;
+        background: url("static/header3.jpg") no-repeat fixed center;
         background-size: cover;
     }
 
@@ -123,7 +123,7 @@
 <body>
 
 <div id="myheader">
-    <script>$('#myheader').load('../static/header.html');</script>
+    <script>$('#myheader').load('header.html');</script>
 </div>
 
 
@@ -154,7 +154,7 @@
                     <p>Ytodo todo todo todo todo todo  todo todo todo todo todo todo </p>
                 </div>
                 <div class="six wide right floated column">
-                    <img src="headerticket.jpg" class="ui large bordered rounded image">
+                    <img src="../static/headerticket.jpg" class="ui large bordered rounded image">
                 </div>
             </div>
         </div>
