--- a/src/main/resources/templates/flights.html
+++ b/src/main/resources/templates/flights.html
@@ -35,7 +35,7 @@
         <div class="ui divided items">
             <div class="item">
                 <div class="image">
-                    <img src="flightimg.jpg">
+                    <img src="../static/flightimg.jpg">
                 </div>
                 <div class="content">
                     <a class="header">ToSydney</a>
@@ -66,7 +66,7 @@
 
             <div class="item">
                 <div class="image">
-                    <img src="flightimg.jpg">
+                    <img src="../static/flightimg.jpg">
                 </div>
                 <div class="content">
                     <a class="header">ToNewYork</a>
@@ -97,7 +97,7 @@
 
             <div class="item">
                 <div class="image">
-                    <img src="flightimg.jpg">
+                    <img src="../static/flightimg.jpg">
                 </div>
                 <div class="content">
                     <a class="header">ToWarsaw</a>
