work on register controller

--- a/src/main/resources/templates/personal_data.html
+++ b/src/main/resources/templates/personal_data.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+<html>
 
 <head>
     <title>Demo</title>
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="../static/semantic/dist/semantic.min.css" th:href="@{/semantic/dist/semantic.min.css}" />
-    <script src="../static/semantic/dist/components/visibility.js" th:href="@{/semantic/dist/components/visibility.js}"></script>
-    <script src="../static/semantic/dist/components/sidebar.js" th:href="@{/semantic/dist/components/sidebar.js}"></script>
-    <script src="../static/semantic/dist/components/transition.js" th:href="@{/semantic/dist/components/transition.js}"></script>
-    <script src="../static/semantic/dist/semantic.min.js" th:href="@{/semantic/dist/semantic.min.js}"></script>
+    <link rel="stylesheet" type="text/css" href="../static/semantic/dist/semantic.min.css"  />
+    <script src="../static/semantic/dist/components/visibility.js" ></script>
+    <script src="../static/semantic/dist/components/sidebar.js" ></script>
+    <script src="../static/semantic/dist/components/transition.js" ></script>
+    <script src="../static/semantic/dist/semantic.min.js" ></script>
 
 
     <style>
@@ -64,7 +63,7 @@
                         <div class="imageplaceholder five wide column left floated">
                             <div class="image">
                             <div class="ui medium bordered fluid image">
-                                <img src="userimage.jpg"/>
+                                <img src="../static/userimage.jpg"/>
                             </div>
                             </div>
                         </div>
