work on register controller

--- a/src/main/resources/templates/flights.html
+++ b/src/main/resources/templates/flights.html
@@ -63,7 +63,7 @@
 
             <div class="item">
                 <div class="image">
-                    <img src="../static/flightimg.jpg"/>
+                    <img src="flightimg.jpg"/>
                 </div>
                 <div class="content">
                     <a class="header">ToNewYork</a>
@@ -94,7 +94,7 @@
 
             <div class="item">
                 <div class="image">
-                    <img src="../static/flightimg.jpg"/>
+                    <img src="flightimg.jpg"/>
                 </div>
                 <div class="content">
                     <a class="header">ToWarsaw</a>
