--- a/src/main/resources/templates/userdata.html
+++ b/src/main/resources/templates/userdata.html
@@ -64,7 +64,7 @@
                         <div class="imageplaceholder five wide column left floated">
                             <div class="image">
                             <div class="ui medium bordered fluid image">
-                                <img src="../static/userimage.jpg"/>
+                                <img src="userimage.jpg"/>
                             </div>
                             </div>
                         </div>
