--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+
 <head>
     <title>Demo</title>
 
@@ -33,35 +34,35 @@
             </h2>
             <div class="four column row">
                 <div class="ten wide column" style="width: 500px;">
-                    <form action="#"  method="POST">
+                    <form action="#" th:action="@{/register}"  th:object="${clientForm}" method="POST" th:method="post">
                     <div class="field input">
                         <label>Name</label>
                         <label>
-                            <input type="text" name="regName" />
+                            <input type="text" name="regName" th:field="*{name}"/>
                         </label>
                     </div>
                     <div class="field input">
                         <label>Surname</label>
                         <label>
-                            <input type="text" />
+                            <input type="text" th:field="*{lastName}"/>
                         </label>
                     </div>
                     <div class="field">
                         <label>Email Address</label>
                         <label>
-                            <input type="email" />
+                            <input type="email" th:field="*{email}"/>
                         </label>
                     </div>
                     <div class="field">
                         <label>Pesel</label>
                         <label>
-                            <input type="number" name="pesel" />
+                            <input type="number" name="pesel" th:field="*{pesel}"/>
                         </label>
                     </div>
                     <div class="field">
                         <label>Password</label>
                         <label>
-                            <input type="password" name="regPassword"/>
+                            <input type="password" name="regPassword" th:field="*{password}"/>
                         </label>
                     </div>
 
