--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -154,7 +154,7 @@
                     <p>Ytodo todo todo todo todo todo  todo todo todo todo todo todo </p>
                 </div>
                 <div class="six wide right floated column">
-                    <img src="../static/headerticket.jpg" class="ui large bordered rounded image">
+                    <img src="headerticket.jpg" class="ui large bordered rounded image">
                 </div>
             </div>
         </div>
